working on frontend

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -1,141 +1,362 @@
-/*
-Common
-************************************/
-
-html,
-body {
-    height: 100%;
-    font-family: sans-serif;
-}
-
-.content {
-    width: 600px;
-    height: 100%;
-    margin: 0 auto;
-    border-left: 1px solid #ccc;
-    border-right: 1px solid #ccc;
-}
-
-@media screen and (max-width: 500px) {
-}
-
-/*
-Posts
-************************************/
-
-.post_form {
-    padding: 20px;
-    border-bottom: 1px solid #ccc;
-}
-
-.post_form input {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-.post_form textarea {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-.post_form .upload-area {
-    width: 96%;
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    text-align: center;
-}
-
-.post_form button {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-}
-
-.upload-image {
-    width: 50%;
-}
-
-.posts ul {
+*,body{
+    margin: 0;
     padding: 0;
 }
 
-.posts li {
-    position: relative;
+/***********/
+/* Header  */
+/***********/
+
+img.backgroundimg {
+    width: 100%;
+  }
+
+  img.whitebg{
+width: 100%;
+margin-top: -2%;
+  }
+
+img.logo {
+    position: absolute;
+    left: 10vw;
+    top: -1%;
+    width: 10%;
+}  
+
+@media screen and (max-width:700px) {
+    img.logo{
+        width:20%;
+    }
+}
+
+p.text {
+    position: absolute;
+    top: 22vw;
+    left: 10vw;
+    color: white;
+    font-size: 4vw;
+    font-family: montserrat;
+    
+}
+
+@media screen and (max-width:700px) {
+    p.text {
+        font-size: 4vw;
+    }
+}
+
+span.happiness {
+    color: #e1a700;
+    font-weight: bold;
+}
+
+h1 {
+    color: #a80e0e;
+    text-align: center;
+    margin-top: 4%;
+    /* font-family: A; */
+}
+
+img.brush {
+    margin-top: 1vw;
+    font-family: Avegeance mightiest avenger;
+    display: block;
+    width: 24%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+
+p.text1 {
+    margin-top: 1% ;
+    text-align: center;
+    font-family: montserrat;
+}
+
+.buttonAll {
     display: flex;
-    border-bottom: 1px solid #ccc;
-    padding: 20px 40px;
-    list-style: none;
+    margin-top: 2%;
+    text-align: center;
+    justify-content: space-evenly;
 }
 
-.posts li .menu_icon {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    right: 30px;
-    top: 18px;
-    cursor: pointer;
+button.button {
+    padding: 15px 45px;
+    background-color: #a80e0e;
+    border-radius: 30px;
+    color: white;
+    border: 0;
+    font-size: 18px;
 }
 
-.posts li .menu {
-    position: absolute;
-    top: 40px;
-    right: 15px;
-    border: 1px solid #ccc;
-    background-color: white;
-    padding: 10px 15px;
-    font-size: 13px;
-    border-radius: 3px;
-    cursor: pointer;
+button#yellowButton {
+    background-color: #e1a700;
 }
 
-.posts li img {
+.items{
+    margin-top: 5%;
+}
+
+ul.container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+
+}
+
+li.menu {
+    list-style-type: none;
+    width: 350px;
+    height: 480px;
+    margin-top: 50px;
+    margin: 20px auto;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+}
+
+img.itemImg{
     width: 100%;
 }
+/* 
+img.white-shadow{
 
-.posts li .menu a {
-    text-decoration: none;
+} */
+
+.item-info{
+padding-left: 3% ;
 }
 
-.posts li .logo {
-    flex-basis: 15%;
+.likes-count{
+    display: flex;
+    margin-top: 4% ;
 }
 
-.posts li .logo img {
-    width: 60%;
+
+b {
+    font-size: 26px;
+    float: left;
+    margin-top: 4% ;
 }
 
-.posts li .name_body {
-    flex-basis: 85%;
+.review {
+    background-color: #fff;
+    border: 0;
+    cursor: pointer;
+    /* margin-top: 1% ; */
+    padding-top: 4% ;
+    font-size: 16px;
+    color: #1c77f4;
 }
 
-.posts li .name_body .name {
+
+
+.cartButtonall {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 18%;
+}
+
+button.cartButton {
+    padding: 10px 17px;
+    background-color: #e1a700;
+    border: 0;
+    color: white;
+    border-radius: 20px;
+    font-size: 18px;
+}
+
+img.cartIcon{
+    padding-right: 10px;
+}
+
+.price{
+    margin: 2% 7% 2% 0;
+}
+
+footer {
+    text-align: center; 
+}
+
+p.footer-p{
+    color: #808080;
+}
+
+p.contact {
+    margin-top: 20px;
+    font-family: poppins;
+    margin-bottom: 20px;
+}
+
+span#contact {
     font-weight: bold;
-    margin-bottom: 10px;
 }
 
-.posts li .name_body .body {
-    margin: 10px 0px;
+hr {
+    color: #f1f1f159;
 }
 
-.posts li .name_body .datetime {
-    color: gray;
-    margin-bottom: 10px;
-}
-
-.no-post {
+p.copyrights {
+    color: #aeaeae;
+    padding: 20px;
     text-align: center;
 }
 
-.no-post p {
-    margin: 0px 0px;
+
+/* Writereview */
+
+section.gradient {
+    background-image: linear-gradient(45deg, #00000095, transparent);
+  }
+
+li.menu1 {
+    list-style-type: none;
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+    height: 480px;
+    margin-top: 50px;
+    margin: 7vw;
+    width: 80%;
+    position: absolute;
+    top: 0;
+    background-color: white;
+    border-radius: 25px;
 }
 
-.loading {
-    text-align: center;
+.writereview {
+    position: relative;
+    width: 80%;
+    padding: 70px;
+    text-align: -webkit-left;
+}
+p.thought {
+    margin-bottom: 30px;
+}
+
+p.Write {
+    font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+button.goodimg {
+    border-radius: 20px;
+    border: 1px solid rgb(92, 92, 92);
+    padding: 1px 10px;
+    margin: 5px;
+}
+
+img.images {
+    width: 80%;
+}
+
+input.input.button {
+    width: 95%;
+    padding: 15px 10px;
+    margin-top: 10px;
+    border-top-style: hidden;
+    border-right-style: hidden;
+    border-left-style: hidden;
+    color: rgb(92, 92, 92);
+    font-size: 18px;
+
+}
+
+button.sendreview {
+    padding: 15px 55px;
+    border-radius: 25px;
+    border: 0;
+    margin-top: 20px;
+    background-color: #e1a700;
+    color: white;
+}
+
+img.closebutton {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+/* cartpage */
+
+ul.cartItems {
+    margin: 70px 80px;
+}
+
+li.items {
+    list-style-type: none;
+    margin-top: 50px;
+    width: 100%;
+    background-color: white;
+    border-radius: 25px;
+
+    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%);
+    transition: 0.3s;
+}
+
+img.item1 {
+    width: 45%;
+    border-radius: 15px;
+}
+
+.itemDetails {
+    display: inline-block;
+    position: absolute;
+    margin: 20px 0 0 20px;
+    width: 35%;
+}
+
+p.name {
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+p.description {
+    color: #100f0f80;
+}
+
+button.cartbutton {
+    font-size: 24px;
+    margin-top: 20px;
+    border-radius: 20px;
+    border: 1px solid #e7e4e44f;
+}
+
+span#plusminus {
+    background-color: #e7e4e44f;
+    border-radius: 10px;
+    padding: 1px 10px;
+    color: white;
+    font-size: 27px;
+}
+
+p.itemPrice {
+    display: inline;
+    margin-left: 30px;
+    color: #a80e0e;
+    font-size: 20px;
+}
+
+.last {
+    justify-content: space-between;
+    display: flex;
+    margin: 30px 80px;
+    font-size: 25px;
+}
+
+button.backtohome {
+    background-color: #a80e0e;
+    color: white;
+    border: 0;
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.totalCost {
+    font-size: 20px;
+}
+
+span#cost {
+    font-weight: bold;
 }
